--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
-    "framer-motion": "^11.1.7",
+    "framer-motion": "^11.2.10",
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -28,6 +28,7 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "web-vitals": "^2.1.4"
