--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-spring": "^9.7.3",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
+    "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
